# AI-Orchestration-Builder

./: .gitignore  pyproject.toml  readme.md
docs/: orchestration_spec.md
src/: run_local.py
src/db/: init.sql
src/ember_ai/: config.py  schemas.py  supabase_client.py
src/ember_ai/prompts/: builder.py  rules.py  safety.py  task.py  tone.py
src/ember_ai/workflows/: save_worksheet.py  worksheet_generator.py
