[project]
name = "ember-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Mohammad Taradeh"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "langchain (>=1.2.0,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "langchain-openai (>=1.1.6,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
